--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
 ###################
+### v1.5.0c     ###
+###################
+
+Bug fixes:
+- Remove CAST gem, only include fixes
+- Update examples and tests
+
+###################
 ### v1.5.0b     ###
 ###################
 
